--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
 *.pyc
 *.pyo
 *.DS_Store
-./Medusa.egg-info
-./dist
-./build
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
